--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-<nav>
+<nav class="nav">
     <h3 class="color">
         Influencer products
     </h3>
@@ -52,11 +52,13 @@
     <h3 class="content-title color">Popular Collection</h3>
     <div class="imgs">
         
-       <div class="img-des"> <img class="img1" src="./images/action.png" alt="">
-    <h2>Action Camera</h2>
-    <h3>$380.00</h3>
-    <p>4.99 <br>Wordwide shifting <br>available <br>
-        Buyers protection possible!</p>
+       <div class="img-des"> 
+        <img class="img1" src="./images/action.png" alt="">
+        <div class="img-crip"> <h2>Action Camera</h2>
+            <h3>$380.00</h3>
+            <p>4.99 <br>Wordwide shifting <br>available <br>
+                Buyers protection possible!</p></div>
+   
     </div>
     <div class="img-des">
         <img class="img1" src="./images/drone.png" alt="">
@@ -64,7 +66,8 @@
         <h3>$980.00</h3>
         <p>4.99 <br> Wordwide shifting <br> available <br>
             Buyers protection possible!</p>
-        </div><div class="img-des"> <img class="img1" src="./images/action.png" alt="">
+        </div>
+        <div class="img-des"> <img class="img1" src="./images/action.png" alt="">
             <h2>Action Camera</h2>
             <h3>$380.00</h3>
             <p>4.99 <br>Wordwide shifting <br>available <br>
@@ -99,28 +102,63 @@
   <img class="img1" src="./images/single-light.png" alt="">
     <h2>Photoshoot set</h2>
     <h3>$1200.00</h3>
-          Buyers protection possible!</p>
+    <p>4.99 <br> Wordwide shifting <br> available <br>
+        Buyers protection possible!</p>
              </div>
-                            <div class="img-des">
-                                <img class="img1" src="./images/setup.png" alt="">
-                                <h2>Green Screen</h2>
-                                <h3>$1200.00</h3>
-                                <p>4.99 <br> Wordwide shifting <br> available <br>
-                                    Buyers protection possible!</p>
-                                </div>        
-                                <div class="img-des">
-                                <img class="img1" src="./images/mic.png" alt="">
-                                    <h2>Green Screen</h2>
-                                    <h3>$1200.00</h3>
-                                    <p>4.99 <br> Wordwide shifting <br> available <br>
-                                        Buyers protection possible!</p>
-                                    </div>              
+   
+             <div class="img-des">
+                <img class="img1" src="./images/setup.png" alt="">
+                <h2>Green Screen</h2>
+                <h3>$1200.00</h3>
+                <p>4.99 <br> Wordwide shifting <br> available <br>
+                    Buyers protection possible!</p>
+                </div>                  
+                <div class="img-des">
+                    <img class="img1" src="./images/mic.png" alt="">
+                        <h2>Green Screen</h2>
+                        <h3>$1200.00</h3>
+                        <p>4.99 <br> Wordwide shifting <br> available <br>
+                            Buyers protection possible!</p>
+                        </div>                           
      
+    </div>
+</section>
+<div class="See">
+    <p>See more</p>
+    <img src="./images/icons/Group.svg" alt="">
+</div>
+<section class="featured">
+    <div class="gear">
+        <img src="./images/gear.png" alt="">
+    </div>
+    <div>
+        <h2 class="feature-heading">
+            Featured products at one place
+        </h2>
+        <p class="gear-para">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+        </p>
+       <div class="join">
+        <p>
+            Join now
+        </p>
+        <img class="arrow" src="./images/icons/Group.svg" alt="">
+       </div>
     </div>
 </section>
     </main>
     <footer>
-
+        <div>
+            <h1 class="footer-heading">
+                Influencer Products
+            </h1>
+            <p class="copy">
+                &copy; 2020 Influencer products <br> All rights reserved
+            </p>
+        </div>
+<div class="social">
+    <img src="./images/iconss/Social Icons/Dribbble.svg" alt=""><img src="./images/iconss/Social Icons/Instagram.svg" alt=""><img src="./images/iconss/Social Icons/Twitter.svg" alt=""><img src="./images/iconss/Social Icons/Youtube.svg" alt="">
+</div>
     </footer>
 </body>
 </html>
